# emt

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  README.md  agent-merge.txt  old_frontend_contracts.md  package-lock.json  pcr_autodrafter_plan.txt  qi_review_update_prompts.md  sentinel_scaffolding_prompts.md
.claude/: SKILL.md
.claude/skills/: update-claude-md.md
backend/: pyproject.toml
backend/app/: case_loader.py  config.py  llm_clients.py  main.py  pcr_store.py  prompts.py  schemas.py  upstream_cache.py
backend/app/api/: cases.py  pcr_draft.py  pipeline.py
backend/app/pipeline/: _fixture.py  audio_analyzer.py  cad_parser.py  drafting.py  findings.py  orchestrator.py  pcr_drafter.py  pcr_parser.py  protocol_check.py  protocols.py  reconciliation.py  video_analyzer.py
backend/case_01/: pcr_draft.json
backend/case_02/: cad.json  metadata.json  pcr.md
backend/scripts/: run_pipeline.py  warm_cache.py
backend/tests/: test_audio_analyzer.py  test_case_cache.py  test_case_create.py  test_drafting.py  test_findings.py  test_pcr_drafter.py  test_pcr_parser.py  test_reconciliation.py  test_schemas.py  test_video_analyzer.py
cases/case_01/: aar.json  cad.json  (+2 more)
docs/: API.md  ARCHITECTURE.md  BACKEND_AUDIT.md  COMPONENT_AUDIT.md  DEPLOYMENT.md  INTEGRATION_AUDIT.md  PCR_FLOW_AUDIT.md  PITCH.md  PLAN.md  PROGRESS.md  REPO_STRUCTURE.md  pcr_frontend_prompt.md  wiring_prompt.md
frontend/: .env.example  README.md  _headers  _redirects  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
(+126 files in other folders)
