[project]
name = "sentinel-backend"
version = "0.1.0"
description = "Sentinel — agentic EMS quality review backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2",
    "pydantic-settings>=2.5",
    "anthropic>=0.39",
    "google-generativeai>=0.8",
    "openai>=1.50",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
